--- a/MODUL 2/Latihan 2/CS/kegiatan_2.css
+++ b/MODUL 2/Latihan 2/CS/kegiatan_2.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background: linear-gradient( #0056b3, #739ecc); 
     margin: 0;
     padding: 20px;
 }
